@@ -1,3 +1,6 @@
+2011-03-17  Jean-Louis Martineau <martineau@zmanda.com>
+	* amandad-src/amandad.c: unset SUN_PERSONALITY on startup.
+
 2011-03-10  Jean-Louis Martineau <martineau@zmanda.com>
 	* perl/Amanda/Changer/disk.pm: Use -l to check symlink existance.
 
